--- a/css/style.css
+++ b/css/style.css
@@ -125,8 +125,7 @@ font-family: 'HBK','Arial','sans-serif'; }
 .bg-blog .navbar{ background-color: #fff;padding:20px 40px;z-index: 999999;margin-bottom: 0px;}
 .map-head h1 {text-transform: uppercase;color: #fff;font-size: 57px;font-weight: 600; font-family: 'HBK','Arial','sans-serif'!important;}
 .map-head {text-align: center;padding-top: 50px; padding-bottom: 45px;}
-.blog-top{text-align: center; z-index: 99999999!important; position: absolute; top: 52%;  width: 100%;
-background-image: linear-gradient(rgba(255, 255, 255, 0.12) , white);}
+.blog-top{text-align: center; z-index: 99999999!important; position: absolute; top: 52%;  width: 100%;}
 .slider-wrapper1{position: relative; top: -150px;}
 .blog-top h1{font-size:51px;     margin-bottom: 40px;     font-weight: 600;    font-family: 'HBK','Arial','sans-serif'!important;    padding-left: 18%;
     padding-right: 18%;}
@@ -199,7 +198,7 @@ background-image: linear-gradient(rgba(255, 255, 255, 0.12) , white);}
 .preft1{ padding-top: 30px;    padding-left: 59px;}
 .border-bottom-post{border-top:3px solid #9e9e9e; margin-top: 81px;}
 .main-post{padding-top:0px; position: relative;     margin-bottom: 67px;}
-.main-post:before{position: absolute; content: ""; bottom: 0px; border-bottom:2px solid #e75c01; width: 37%;}
+.main-post:before{position: absolute; content: ""; bottom: 0px;  width: 37%;}
 .main-post h2{font-size: 45px!important;margin-bottom: 40px;font-weight: 600;     font-family: 'HBK','Arial','sans-serif'!important;}
 .footer-row{padding-bottom:100px;}
 .nn1{display: none;}
@@ -343,7 +342,7 @@ ul.modal-nav-main-menu {color:#fff;list-style: none;padding:0;text-align: right;
   width: 40% !important;
 }
 .fb_ltr{
-  width: 1160px!important;
+  width: 100%!important;
 }
 .ytp-pause-overlay {
     display: none !important;
@@ -367,3 +366,4 @@ a.page-numbers  { font-size: 14px; color: #3888ff; }
     font-size: 23px;
     margin-bottom: 30px;
 }
+.iframvideo{height: 500px;}
